# swapchain-override-reshade-addon

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: build.yml  release.yml
cmake/: GenerateShaderHeader.cmake
src/: addon.cpp  common.h  config.cpp  config.h  debug_logger.cpp  debug_logger.h  event_handlers.cpp  main.cpp  overlay.cpp  overlay.h  reshade_callbacks.cpp  reshade_callbacks.h  swapchain_manager.cpp  swapchain_manager.h  window_hooks.cpp  window_hooks.h
